--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install numpy nltk langdetect pandas spacy pytest pytest-cov pytest-mock pgmpy tensorflow torch transformers pytorch torchvision torchaudio emoji
+          pip install -r requirements.txt
      
       # Step 5: Cache Dependencies
       - name: Cache dependencies
