Fixed a typo and a miss

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,6 +40,7 @@ jobs:
         env:
           VALIDATE_PYTHON_PYLINT: true
           DEFAULT_BRANCH: main
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # Step 5: Test Dependency Security Vulnerabilities
       - name: Check Dependency Security Vulnerabilities
@@ -48,7 +49,7 @@ jobs:
           args: check --full-report
           api-key: ${{ secrets.SAFETY_API_KEY }}
         env:
-          GITHUB_TOKEN: ${{ secrets.SAFETY_API_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # Step 6: Test Application Security Vulnerabilities
       - name: Run Bandit Security Checks
