Added GitHub secrets for Bandit

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,6 +6,7 @@ on:
       - '**' # Trigger on all branches
   pull_request:
     branches:
+      - '**' # Trigger on all branches
       types:
         - opened
         - reopened
