Added permission via new access token for GitHub

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,7 +50,7 @@ jobs:
         env:
           VALIDATE_PYTHON_PYLINT: true
           DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.SAMHAIL_TOKEN }}
 
       # Step 5: Test Dependency Security Vulnerabilities
       - name: Check Dependency Security Vulnerabilities
@@ -59,7 +59,7 @@ jobs:
           args: check --full-report
           api-key: ${{ secrets.SAFETY_API_KEY }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.SAMHAIL_TOKEN}}
 
       # Step 6: Test Application Security Vulnerabilities
       - name: Run Bandit Security Checks
@@ -67,7 +67,7 @@ jobs:
         with:
           args: -r models/base_models
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.SAMHAIL_TOKEN }}
 
       # Step 7: Run Unit Tests and Generate Coverage Report
       - name: Run Unit Tests
