--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ Jinja2==3.1.6
 joblib==1.4.2
 keras==3.9.2
 langcodes==3.5.0
+langdetect==1.0.9
 language_data==1.3.0
 libclang==18.1.1
 marisa-trie==1.2.1
