--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -79,4 +79,10 @@ jobs:
       # Step 9: Run Unit Tests and Generate Coverage Report
       - name: Run Unit Tests
         run: |
-          python -m pytest --cov=. --cov-report=json
+          python -m pytest --cov --cov-report=xml
+
+      # Step 10: Upload coverage reports to Codecov
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
