Cover only models for test

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -79,7 +79,7 @@ jobs:
       # Step 9: Run Unit Tests and Generate Coverage Report
       - name: Run Unit Tests
         run: |
-          python -m pytest --cov --cov-report=xml
+          python -m pytest --cov=models/ --cov-report=xml
         continue-on-error: true
 
       # Step 10: Upload coverage reports to Codecov
