--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 absl-py==2.2.2
 annotated-types==0.7.0
 appnope==0.1.4
+astroid==3.3.9
 asttokens==3.0.0
 astunparse==1.6.3
+autopep8==2.3.2
 bandit==1.8.3
 beautifulsoup4==4.13.3
+black==25.1.0
 blis==1.2.1
 catalogue==2.0.10
 certifi==2025.1.31
@@ -17,6 +20,7 @@ coverage==7.8.0
 cymem==2.0.11
 debugpy==1.8.13
 decorator==5.2.1
+dill==0.3.9
 emoji==2.14.1
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
 executing==2.2.0
@@ -33,6 +37,7 @@ iniconfig==2.1.0
 ipykernel==6.29.5
 ipython==9.0.2
 ipython_pygments_lexers==1.1.1
+isort==6.0.1
 jedi==0.19.2
 Jinja2==3.1.6
 joblib==1.4.2
@@ -48,10 +53,12 @@ Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
+mccabe==0.7.0
 mdurl==0.1.2
 ml-dtypes==0.3.2
 mpmath==1.3.0
 murmurhash==1.0.12
+mypy-extensions==1.0.0
 namex==0.0.8
 nest-asyncio==1.6.0
 networkx==3.4.2
@@ -62,7 +69,9 @@ optree==0.14.1
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
+pathspec==0.12.1
 patsy==1.0.1
+pbr==6.1.1
 pexpect==4.9.0
 pgmpy==1.0.0
 pillow==11.1.0
@@ -74,9 +83,12 @@ protobuf==4.25.6
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pybadges==3.0.1
+pycodestyle==2.13.0
 pydantic==2.11.2
 pydantic_core==2.33.1
 Pygments==2.19.1
+pylint==3.3.6
 pyparsing==3.2.3
 pyro-api==0.1.2
 pyro-ppl==1.9.1
@@ -104,6 +116,7 @@ spacy-loggers==1.0.5
 srsly==2.5.1
 stack-data==0.6.3
 statsmodels==0.14.4
+stevedore==5.4.1
 sympy==1.13.3
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
@@ -112,6 +125,7 @@ termcolor==3.0.1
 thinc==8.3.4
 threadpoolctl==3.6.0
 tokenizers==0.21.1
+tomlkit==0.13.2
 torch==2.2.2
 torchaudio==2.2.2
 torchvision==0.17.2
