--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 cloudpathlib==0.21.0
+coloredlogs==15.0.1
 comm==0.2.2
 confection==0.1.5
 coverage==7.8.0
@@ -37,6 +38,7 @@ h5py==3.13.0
 httpcore==1.0.8
 httpx==0.28.1
 huggingface-hub==0.30.1
+humanfriendly==10.0
 idna==3.10
 iniconfig==2.1.0
 ipykernel==6.29.5
@@ -70,6 +72,8 @@ nest-asyncio==1.6.0
 networkx==3.4.2
 nltk==3.9.1
 numpy==1.26.4
+onnx==1.17.0
+onnxruntime==1.21.0
 openai==1.55.3
 opt_einsum==3.4.0
 optree==0.14.1
